# HelloCV

./: CMakeLists.txt  README.md
include/: Crypto.h  FileHandler.h  Menu.h
src/: .FileHandler.cpp.swp  Crypto.cpp  FileHandler.cpp  Menu.cpp  main.cpp
